# 05-serial-f4-rs

./: Cargo.toml  README.md  cargo-generate.toml  git-setup.bat  git-setup.sh
src/: main.rs
